finission du header et du hero

--- a/src/_partials/_header.html
+++ b/src/_partials/_header.html
@@ -8,5 +8,10 @@
         <link rel="stylesheet" href="styles/main.css" />
         <script src="scripts/main.js" defer></script>
     </head>
-
     <body>
+
+        <header class="header">
+            <div class="wrapper">
+                <a href="#" class="nom">David Benoit Cardinal</a>
+            </div>
+        </header>
