--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,18 @@
 {% include "_partials/_header.html" %}
 
-<!-- Votre contenu ici -->
+<section class="hero">
+    <div class="wrapper">
+        <div class="hero__media">
+            <img src="assets/images/hero.jpg" alt="hero" />
+        </div>
+        <div class="hero__content">
+            <h1>
+                Mon cahier
+                <br />
+                d'exercice
+            </h1>
+        </div>
+    </div>
+</section>
 
 {% include "_partials/_footer.html" %}
