section labo terminé

--- a/src/index.html
+++ b/src/index.html
@@ -15,4 +15,74 @@
     </div>
 </section>
 
+<section class="labo">
+    <div class="wrapper">
+        <h2>
+            <span>Mes premiers</span>
+            laboratoires
+        </h2>
+        <div class="cards">
+            <div class="card">
+                <div class="card__media">
+                    <img src="assets/images/exercice1.png" alt="L'exercice de la semaine 1" />
+                </div>
+                <div class="card__content">
+                    <h3>SEM 01 - RÉVISION</h3>
+                    <p>
+                        <span>Le tout premier exercice de la session.</span>
+                        Cet exercice servait surtout à réviser le display flex et grid.
+                    </p>
+                    <p class="note">HTML + CSS</p>
+                    <a href="https://dbenoitcardinal.dectim.ca/cours/cw3/sem1/" class="btn">VOIR LE LABORATOIRE</a>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card__media">
+                    <img src="assets/images/exercice2.png" alt="L'exercice de la semaine 2" />
+                </div>
+                <div class="card__content">
+                    <h3>SEM 02 - TIMTOOLS</h3>
+                    <p>
+                        <span>Le second exercice de la session.</span>
+                        Cet exercice servait à l'apprentissage du Timtools.
+                    </p>
+                    <p class="note">SCSS</p>
+                    <a href="https://dbenoitcardinal.dectim.ca/cours/cw3/sem2/" class="btn">VOIR LE LABORATOIRE</a>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card__media">
+                    <img src="assets/images/exercice3.png" alt="L'exercice de la semaine 3" />
+                </div>
+                <div class="card__content">
+                    <h3>SEM 03 - PORTFOLIO DE LOUISA JOY</h3>
+                    <p>
+                        <span>Le troisième exercice de la session.</span>
+                        Cet exercice servait à l'application des nouvelles notions de début de session.
+                    </p>
+                    <p class="note">HTML + SCSS</p>
+                    <a href="https://dbenoitcardinal.dectim.ca/cours/cw3/sem3/" class="btn">VOIR LE LABORATOIRE</a>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card__media">
+                    <img src="assets/images/exercice4.png" alt="L'exercice de la semaine 4" />
+                </div>
+                <div class="card__content">
+                    <h3>SEM 04 - ICÔNES ET CLASSES JS</h3>
+                    <p>
+                        <span>Le quatrième exercice de la session.</span>
+                        Cet exercice servait à réviser le Javascript ainsi qu'à l'application de Tim icons.
+                    </p>
+                    <p class="note">SCSS - JAVASCRIPT</p>
+                    <a href="https://dbenoitcardinal.dectim.ca/cours/cw3/sem4/" class="btn">VOIR LE LABORATOIRE</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 {% include "_partials/_footer.html" %}
