section labo_reactif terminé

--- a/src/index.html
+++ b/src/index.html
@@ -85,4 +85,62 @@
     </div>
 </section>
 
+<section class="labo_reactif">
+    <div class="wrapper">
+        <h2>
+            <span>Mes</span>
+            laboratoires réactifs
+        </h2>
+        <div class="cards swiper">
+            <div class="swiper-wrapper">
+                <div class="card swiper-slide">
+                    <div class="card__media">
+                        <img src="assets/images/exercice7.png" alt="L'exercice de la semaine 7" />
+                    </div>
+                    <div class="card__content">
+                        <h3>SEM 07 - SITE RÉACTIF</h3>
+                        <p>
+                            <span>Le septième exercice de la session.</span>
+                            Cet exercice servait à l'intergration du responsive dans nos sites.
+                        </p>
+                        <p class="note">SCSS + JAVASCRIPT</p>
+                        <a href="https://dbenoitcardinal.dectim.ca/cours/cw3/sem7/" class="btn reactif">VOIR LE LABORATOIRE</a>
+                    </div>
+                </div>
+
+                <div class="card swiper-slide">
+                    <div class="card__media">
+                        <img src="assets/images/exercice8.png" alt="L'exercice de la semaine 8" />
+                    </div>
+                    <div class="card__content">
+                        <h3>SEM 08 - CryptoQC</h3>
+                        <p>
+                            <span>Le huitième exercice de la session.</span>
+                            Cet exercice servait à nouveau à la compréhension de la notion de site responsive.
+                        </p>
+                        <p class="note">SCSS</p>
+                        <a href="https://dbenoitcardinal.dectim.ca/cours/cw3/sem8/" class="btn reactif">VOIR LE LABORATOIRE</a>
+                    </div>
+                </div>
+
+                <div class="card swiper-slide">
+                    <div class="card__media">
+                        <img src="assets/images/exercice9.png" alt="L'exercice de la semaine 9" />
+                    </div>
+                    <div class="card__content">
+                        <h3>SEM 09 - SWIPER</h3>
+                        <p>
+                            <span>Le neuvième exercice de la session.</span>
+                            Cet exercice servait à l'application du swiper dans nos sites.
+                        </p>
+                        <p class="note">SCSS + JAVASCRIPT</p>
+                        <a href="https://dbenoitcardinal.dectim.ca/cours/cw3/sem9/" class="btn reactif">VOIR LE LABORATOIRE</a>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-pagination"></div>
+        </div>
+    </div>
+</section>
+
 {% include "_partials/_footer.html" %}
