--- a/src/_partials/_footer.html
+++ b/src/_partials/_footer.html
@@ -1,2 +1,22 @@
-    </body>
+<footer class="footer">
+    <div class="wrapper">
+        <div class="footer__content">
+            <p class="contact">Contactez-<span>moi</span></p>
+            <p class="note">Afin qu'on puisse parler de <span>votre</span> projet.</p>
+        </div>
+        <div class="footer__media">
+            <svg class="icon">
+                <use href="#icon-be"></use>
+            </svg>
+            <svg class="icon">
+                <use href="#icon-messenger"></use>
+            </svg>
+            <svg class="icon">
+                <use href="#icon-in"></use>
+            </svg>
+        </div>
+    </div>
+</footer>
+
+</body>
 </html>
