ajustement des bullets et mise en place des flèche

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,12 @@
                         Cet exercice servait surtout à réviser le display flex et grid.
                     </p>
                     <p class="note">HTML + CSS</p>
-                    <a href="https://dbenoitcardinal.dectim.ca/cours/cw3/sem1/" class="btn">VOIR LE LABORATOIRE</a>
+                    <a href="https://dbenoitcardinal.dectim.ca/cours/cw3/sem1/" class="btn">
+                        VOIR LE LABORATOIRE
+                        <svg class="icon">
+                            <use href="#icon-chevron-right"></use>
+                        </svg>
+                    </a>
                 </div>
             </div>
 
@@ -48,7 +53,12 @@
                         Cet exercice servait à l'apprentissage du Timtools.
                     </p>
                     <p class="note">SCSS</p>
-                    <a href="https://dbenoitcardinal.dectim.ca/cours/cw3/sem2/" class="btn">VOIR LE LABORATOIRE</a>
+                    <a href="https://dbenoitcardinal.dectim.ca/cours/cw3/sem2/" class="btn">
+                        VOIR LE LABORATOIRE
+                        <svg class="icon">
+                            <use href="#icon-chevron-right"></use>
+                        </svg>
+                    </a>
                 </div>
             </div>
 
@@ -63,7 +73,12 @@
                         Cet exercice servait à l'application des nouvelles notions de début de session.
                     </p>
                     <p class="note">HTML + SCSS</p>
-                    <a href="https://dbenoitcardinal.dectim.ca/cours/cw3/sem3/" class="btn">VOIR LE LABORATOIRE</a>
+                    <a href="https://dbenoitcardinal.dectim.ca/cours/cw3/sem3/" class="btn">
+                        VOIR LE LABORATOIRE
+                        <svg class="icon">
+                            <use href="#icon-chevron-right"></use>
+                        </svg>
+                    </a>
                 </div>
             </div>
 
@@ -78,7 +93,12 @@
                         Cet exercice servait à réviser le Javascript ainsi qu'à l'application de Tim icons.
                     </p>
                     <p class="note">SCSS - JAVASCRIPT</p>
-                    <a href="https://dbenoitcardinal.dectim.ca/cours/cw3/sem4/" class="btn">VOIR LE LABORATOIRE</a>
+                    <a href="https://dbenoitcardinal.dectim.ca/cours/cw3/sem4/" class="btn">
+                        VOIR LE LABORATOIRE
+                        <svg class="icon">
+                            <use href="#icon-chevron-right"></use>
+                        </svg>
+                    </a>
                 </div>
             </div>
         </div>
@@ -104,7 +124,12 @@
                             Cet exercice servait à l'intergration du responsive dans nos sites.
                         </p>
                         <p class="note">SCSS + JAVASCRIPT</p>
-                        <a href="https://dbenoitcardinal.dectim.ca/cours/cw3/sem7/" class="btn reactif">VOIR LE LABORATOIRE</a>
+                        <a href="https://dbenoitcardinal.dectim.ca/cours/cw3/sem7/" class="btn reactif">
+                            VOIR LE LABORATOIRE
+                            <svg class="icon">
+                                <use href="#icon-chevron-right"></use>
+                            </svg>
+                        </a>
                     </div>
                 </div>
 
@@ -119,7 +144,12 @@
                             Cet exercice servait à nouveau à la compréhension de la notion de site responsive.
                         </p>
                         <p class="note">SCSS</p>
-                        <a href="https://dbenoitcardinal.dectim.ca/cours/cw3/sem8/" class="btn reactif">VOIR LE LABORATOIRE</a>
+                        <a href="https://dbenoitcardinal.dectim.ca/cours/cw3/sem8/" class="btn reactif">
+                            VOIR LE LABORATOIRE
+                            <svg class="icon">
+                                <use href="#icon-chevron-right"></use>
+                            </svg>
+                        </a>
                     </div>
                 </div>
 
@@ -134,7 +164,12 @@
                             Cet exercice servait à l'application du swiper dans nos sites.
                         </p>
                         <p class="note">SCSS + JAVASCRIPT</p>
-                        <a href="https://dbenoitcardinal.dectim.ca/cours/cw3/sem9/" class="btn reactif">VOIR LE LABORATOIRE</a>
+                        <a href="https://dbenoitcardinal.dectim.ca/cours/cw3/sem9/" class="btn reactif">
+                            VOIR LE LABORATOIRE
+                            <svg class="icon">
+                                <use href="#icon-chevron-right"></use>
+                            </svg>
+                        </a>
                     </div>
                 </div>
             </div>
